scripts/tests/errors/err_division_by_zero.bu
// Test: division by zero
// Expected: "Division by zero" error (catchable or runtime)

var x = 10 / 0;
